--- a/resources/assets/admin/styles/_globals.scss
+++ b/resources/assets/admin/styles/_globals.scss
@@ -122,7 +122,9 @@ div.updated{
 .ff_screen_settings,
 .ff_screen_entries,
 .ff_screen_conversational_design,
-.ff_screen_msformentries {
+.ff_screen_msformentries,
+.ff_screen_inventory_list
+{
   padding: 0;
 }
 
